# tsreduce

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
docs/: conf.py  getting_started.rst  index.rst  requirements.txt
docs/api/: reducers.rst
tsreduce/: __init__.py  base.py
tsreduce/reducers/: _utils.py  ae.py  cae.py  ccnn.py  dft.py  dwt.py  isomap.py  kpca.py  paa.py  pca.py  s2v.py  siamese.py  svd.py  tae.py  tcn.py  uniform_downsampling.py
