[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsreduce"
version = "0.3.0"
description = "Time series dimensionality reduction — from PAA to deep learning encoders"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "PyWavelets>=1.4",
    "pyts>=0.12",
    "torch>=2.0",
    "tqdm>=4.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx-autodoc-typehints>=1.25",
]
